[gd_scene load_steps=3 format=3 uid="uid://bh4dberd72i7j"]

[ext_resource type="Script" path="res://Scripts/confirmation_dialog.gd" id="1_xielj"]
[ext_resource type="FontFile" uid="uid://ngxarfbccvdp" path="res://Resources/Fonts/2005_iannnnnCPU.ttf" id="2_cloq4"]

[node name="ConfirmationDialog" type="CanvasLayer"]
script = ExtResource("1_xielj")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = -77.845
offset_right = 142.5
offset_bottom = 77.845
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="MessageLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cloq4")
theme_override_font_sizes/font_size = 42
text = "เริ่มเกมใหม่จะลบข้อมูลเซฟเดิม"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ConfirmButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cloq4")
theme_override_font_sizes/font_size = 32
text = "บันทึกและออก"

[node name="CancelButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cloq4")
theme_override_font_sizes/font_size = 32
text = "ยกเลิก"

[node name="ExtraButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cloq4")
theme_override_font_sizes/font_size = 32
text = "ออกโดยไม่บันทึก"
